--- a/src/components/content-block/forms/location-search/locationSearch.scss
+++ b/src/components/content-block/forms/location-search/locationSearch.scss
@@ -80,5 +80,52 @@
   height: 100%;
 }
 .footer .location-search__modal {
-  top: -100%;
+  top: auto;
+  bottom: 105%;
+  left: 40%;
+  transform: translateX(-40%);
+}
+
+// search input
+.location-search__form {
+  position: relative;
+}
+
+.location-search__input {
+  padding: 6px 40px 6px 15px;
+  border: 1px solid #777C86;
+  border-radius: 18px;
+  width: 100%;
+  height: 36px;
+  display: flex;
+  color: #777C86;
+}
+
+.location-search__input:placeholder-shown {
+  color: #BDBDBD;
+  background-color: #F2F2F2;
+  border-color: transparent;
+  border-radius: 20px;
+}
+
+.location-search__input:focus {
+  background: #FFFFFF;
+  box-shadow: 0 2px 15px rgba(93, 125, 142, 0.3);
+  border-radius: 18px;
+  color: #333333;
+}
+
+.location-search__submit {
+  top: 7px;
+  position: absolute;
+  right: 10px;
+}
+
+//search input effects
+.location-search__submit:hover {
+  cursor: pointer;
+}
+
+.location-search__submit:hover path {
+  fill: #777C86;
 }
