--- a/src/components/detail/detail.scss
+++ b/src/components/detail/detail.scss
@@ -89,6 +89,9 @@
   margin-bottom: 16px;
 }
 
+.detail-content__slider {
+  margin: 40px 0;
+}
 
 @media (max-width: 418.98px) {
   .detail-panel__list:first-child {
