--- a/src/components/menu/header__nav/header__nav.ejs
+++ b/src/components/menu/header__nav/header__nav.ejs
@@ -1,5 +1,5 @@
 <nav class="header__nav">
-    <ul class="header__nav-inner wrapper">
+    <div class="header__nav-inner">
         <ul class="header__nav-menu">
             <li class="header__nav-menu-item">
                 <a class="nav__menu-link" href="#">О проекте</a>
@@ -17,5 +17,5 @@
         <div>
             <a class="header__link-in-shop" href="#">войти в наш магазин</a>
         </div>
-    </ul>
+    </div>
 </nav>
