--- a/src/detail.ejs
+++ b/src/detail.ejs
@@ -33,9 +33,9 @@
     </div>
   </div>
 </div>
-
 <%- include('components/footer/footer'); -%>
 <%- include('components/menu/footer-nav/footer-nav'); -%>
+<%- include('components/content-block/Modal/modal'); -%>
 <script src="main.js"></script>
 </body>
 </html>
