--- a/src/components/footer/footer.ejs
+++ b/src/components/footer/footer.ejs
@@ -1,8 +1,8 @@
 <footer class="footer" data-search-modal-container>
     <div class="footer__wrapper">
-        <div class="footer__inner">
-            <div class="footer__top">
-                <div class="footer__top-logo">
+        <div class="footer__inner desktop">
+            <div class="footer__inner-left">
+                <div class="footer__left-logo">
                     <a href="#">
                         <svg class="footer__logo-image" width="101" height="44" viewBox="0 0 101 44" fill="none" xmlns="http://www.w3.org/2000/svg">
                             <path d="M33 11.0085H40.3811V13.356H35.8366V21.1776H33V11.0085Z" fill="#777C86"/>
@@ -22,7 +22,16 @@
                         <p class="footer__logo-text">Памятники культуры<br/>России и СНГ</p>
                     </a>
                 </div>
-                <div class="footer__top-location-menu">
+                <div class="footer__lift-content">
+                    <p class="footer__left-text">Пишем о историческом наследии <br/>в разных городах России</p>
+                    <div class="footer__services">
+                        <a class="footer__services-link" href="#">Политика конфиденциальности</a>
+                        <a class="footer__services-link" href="#">Соглашение cookies</a>
+                    </div>
+                </div>
+            </div>
+            <div class="footer__inner-center">
+                <div class="footer__location-menu">
                     <div class="footer__link-all-container">
                         <a class="footer__link-all" href="#">Все памятники</a>
                     </div>
@@ -35,6 +44,22 @@
                         </span>
                     </div>
                 </div>
+                <div class="footer__menu-container">
+                    <ul class="footer__menu">
+                        <li class="footer__menu-item"><a class="footer__menu-link" href="#">Личности</a></li>
+                        <li class="footer__menu-item"><a class="footer__menu-link" href="#">Военные</a></li>
+                        <li class="footer__menu-item"><a class="footer__menu-link" href="#">Исторические</a></li>
+                        <li class="footer__menu-item"><a class="footer__menu-link" href="#">Доп.пункт меню</a></li>
+                        <li class="footer__menu-item"><a class="footer__menu-link" href="#">Доп.пункт меню</a></li>
+                        <li class="footer__menu-item"><a class="footer__menu-link" href="#">Религиозные</a></li>
+                        <li class="footer__menu-item"><a class="footer__menu-link" href="#">Персонажи</a></li>
+                        <li class="footer__menu-item"><a class="footer__menu-link" href="#">Необычные</a></li>
+                        <li class="footer__menu-item"><a class="footer__menu-link" href="#">Доп.пункт меню</a></li>
+                        <li class="footer__menu-item"><a class="footer__menu-link" href="#">Доп.пункт меню</a></li>
+                    </ul>
+                </div>
+            </div>
+            <div class="footer__inner-right">
                 <div class="footer__social-container">
                     <ul class="footer__social">
                         <li class="social-item">
@@ -71,33 +96,57 @@
                         </li>
                     </ul>
                 </div>
-            </div>
-            <div class="footer__bottom">
-                <div class="footer__lift-side">
-                    <p class="footer__left-side-text">Пишем о историческом наследии <br/>в разных городах России</p>
-                    <div class="footer__services">
-                        <a class="footer__services-link" href="#">Политика конфиденциальности</a>
-                        <a class="footer__services-link" href="#">Соглашение cookies</a>
-                    </div>
-                </div>
-                <div class="footer__menu-container">
-                    <ul class="footer__menu">
-                        <li class="footer__menu-item">
-                            <a class="footer__menu-link" href="#">Личности</a>
-                        </li>
-                        <li class="footer__menu-item"><a class="footer__menu-link" href="#">Военные</a></li>
-                        <li class="footer__menu-item"><a class="footer__menu-link" href="#">Исторические</a></li>
-                        <li class="footer__menu-item"><a class="footer__menu-link" href="#">Доп.пункт меню</a></li>
-                        <li class="footer__menu-item"><a class="footer__menu-link" href="#">Доп.пункт меню</a></li>
-                        <li class="footer__menu-item"><a class="footer__menu-link" href="#">Религиозные</a></li>
-                        <li class="footer__menu-item"><a class="footer__menu-link" href="#">Персонажи</a></li>
-                        <li class="footer__menu-item"><a class="footer__menu-link" href="#">Необычные</a></li>
-                        <li class="footer__menu-item"><a class="footer__menu-link" href="#">Доп.пункт меню</a></li>
-                        <li class="footer__menu-item"><a class="footer__menu-link" href="#">Доп.пункт меню</a></li>
-                    </ul>
-                </div>
                 <div class="footer__link-in-shop-container">
                     <a class="footer__link-in-shop">войти в наш магазин</a>
+                </div>
+            </div>
+        </div>
+        <div class="footer__inner mobile">
+            <div class="footer__top">
+                <div class="footer__social-container">
+                    <ul class="footer__social">
+                        <li class="social-item">
+                            <a class="social-link" href="#">
+                                <svg class="social-link__vk" width="32" height="32" viewBox="0 0 32 32" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                    <rect width="32" height="32" rx="16" fill="#5181B8"/>
+                                    <path fill-rule="evenodd" clip-rule="evenodd" d="M26.1772 11.023C26.3256 10.5286 26.1772 10.1652 25.4714 10.1652H23.1375C22.544 10.1652 22.2706 10.4791 22.1223 10.8253C22.1223 10.8253 20.9353 13.7182 19.2539 15.5973C18.71 16.1412 18.4627 16.3141 18.166 16.3141C18.0176 16.3141 17.8029 16.1412 17.8029 15.6468V11.023C17.8029 10.4296 17.6307 10.1652 17.1361 10.1652H13.4686C13.0978 10.1652 12.8748 10.4406 12.8748 10.7016C12.8748 11.2643 13.7153 11.3939 13.802 12.9763V16.4133C13.802 17.1668 13.666 17.3035 13.3692 17.3035C12.578 17.3035 10.6536 14.3975 9.51199 11.0725C9.28827 10.4262 9.06388 10.1652 8.46741 10.1652H6.13353C5.46671 10.1652 5.33334 10.4791 5.33334 10.8253C5.33334 11.4435 6.12469 14.5095 9.01754 18.5645C10.9463 21.3334 13.6633 22.8348 16.1359 22.8348C17.6195 22.8348 17.8029 22.5014 17.8029 21.9271V19.8341C17.8029 19.1673 17.9435 19.0342 18.4131 19.0342C18.7595 19.0342 19.3528 19.2073 20.7376 20.5424C22.32 22.1246 22.5807 22.8348 23.4709 22.8348H25.8048C26.4716 22.8348 26.805 22.5014 26.6126 21.8434C26.4023 21.1876 25.6468 20.2363 24.6442 19.1084C24.1002 18.4654 23.2842 17.7731 23.0371 17.427C22.6909 16.9819 22.7898 16.7842 23.0371 16.3888C23.0371 16.3888 25.8805 12.3832 26.1772 11.0232V11.023Z" fill="white"/>
+                                </svg>
+                            </a>
+                        </li>
+                        <li class="social-item">
+                            <a class="social-link" href="#">
+                                <svg class="social-link__ok" width="32" height="32" viewBox="0 0 32 32" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                    <rect width="32" height="32" rx="16" fill="#EE8208"/>
+                                    <path d="M15.9999 8.56009C17.257 8.56009 18.2795 9.58262 18.2795 10.8397C18.2795 12.0957 17.2567 13.1183 15.9999 13.1183C14.7436 13.1183 13.7208 12.0957 13.7208 10.8397C13.7205 9.58236 14.7438 8.56009 15.9999 8.56009ZM15.9999 16.3435C19.0364 16.3435 21.5057 13.8749 21.5057 10.8397C21.5057 7.80294 19.0366 5.33331 15.9999 5.33331C12.9636 5.33331 10.494 7.8032 10.494 10.8397C10.494 13.8749 12.9636 16.3435 15.9999 16.3435ZM18.2273 20.8344C19.36 20.5765 20.4408 20.1289 21.4243 19.5107C21.7864 19.2829 22.0431 18.9206 22.138 18.5035C22.233 18.0864 22.1583 17.6487 21.9306 17.2867C21.8179 17.1072 21.671 16.9517 21.4982 16.8291C21.3254 16.7065 21.1301 16.6191 20.9235 16.572C20.717 16.525 20.5031 16.519 20.2943 16.5547C20.0854 16.5903 19.8856 16.6667 19.7063 16.7796C17.4507 18.1977 14.5475 18.1967 12.2937 16.7796C12.1144 16.6667 11.9147 16.5902 11.7058 16.5546C11.497 16.519 11.2831 16.5249 11.0766 16.572C10.87 16.6191 10.6747 16.7064 10.502 16.8291C10.3292 16.9517 10.1823 17.1072 10.0697 17.2867C9.84185 17.6486 9.7671 18.0863 9.86189 18.5033C9.95668 18.9204 10.2133 19.2828 10.5752 19.5107C11.5586 20.1287 12.6392 20.5762 13.7716 20.8344L10.6938 23.9128C10.3913 24.2154 10.2214 24.6258 10.2215 25.0536C10.2216 25.4814 10.3916 25.8917 10.6942 26.1942C10.9967 26.4966 11.4071 26.6665 11.8349 26.6664C12.2627 26.6664 12.673 26.4963 12.9755 26.1938L15.9993 23.1694L19.025 26.194C19.1746 26.3439 19.3523 26.4627 19.5479 26.5438C19.7435 26.6249 19.9531 26.6666 20.1648 26.6666C20.3766 26.6666 20.5862 26.6249 20.7818 26.5438C20.9774 26.4627 21.1551 26.3439 21.3047 26.194C21.4547 26.0444 21.5737 25.8667 21.655 25.671C21.7362 25.4754 21.778 25.2656 21.778 25.0537C21.778 24.8418 21.7362 24.632 21.655 24.4364C21.5737 24.2407 21.4547 24.063 21.3047 23.9134L18.2273 20.8344Z" fill="white"/>
+                                </svg>
+                            </a>
+                        </li>
+                        <li class="social-item">
+                            <a class="social-link" href="#">
+                                <svg class="social-link__f" width="32" height="32" viewBox="0 0 32 32" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                    <rect width="32" height="32" rx="16" fill="#4267B2"/>
+                                    <path d="M17.0683 26.6666V16.9354H20.3347L20.8237 13.143H17.0683V10.7217C17.0683 9.62375 17.3732 8.87543 18.9479 8.87543L20.9561 8.87451V5.48265C20.6086 5.4366 19.4166 5.33337 18.0298 5.33337C15.1344 5.33337 13.1521 7.10064 13.1521 10.3463V13.1432H9.87729V16.9355H13.152V26.6667L17.0683 26.6666Z" fill="white"/>
+                                </svg>
+                            </a>
+                        </li>
+                        <li class="social-item">
+                            <a class="social-link" href="#">
+                                <svg class="social-link__inst" width="32" height="32" viewBox="0 0 32 32" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                    <rect width="32" height="32" rx="16" fill="#262626"/>
+                                    <path d="M12.6676 16C12.6676 14.1591 14.1595 12.6664 16.0004 12.6664C17.8413 12.6664 19.334 14.1591 19.334 16C19.334 17.8409 17.8413 19.3336 16.0004 19.3336C14.1595 19.3336 12.6676 17.8409 12.6676 16ZM10.8655 16C10.8655 18.836 13.1644 21.1349 16.0004 21.1349C18.8364 21.1349 21.1353 18.836 21.1353 16C21.1353 13.164 18.8364 10.8651 16.0004 10.8651C13.1644 10.8651 10.8655 13.164 10.8655 16ZM20.1386 10.6615C20.1385 10.8989 20.2088 11.1309 20.3406 11.3283C20.4723 11.5257 20.6597 11.6796 20.8789 11.7705C21.0982 11.8614 21.3394 11.8852 21.5722 11.839C21.805 11.7928 22.0189 11.6786 22.1868 11.5109C22.3547 11.3431 22.469 11.1293 22.5154 10.8966C22.5618 10.6638 22.5382 10.4225 22.4474 10.2032C22.3567 9.98392 22.203 9.79644 22.0057 9.6645C21.8084 9.53257 21.5764 9.4621 21.3391 9.462H21.3386C21.0205 9.46215 20.7154 9.58856 20.4904 9.81347C20.2654 10.0384 20.1389 10.3434 20.1386 10.6615ZM11.9604 24.1398C10.9855 24.0954 10.4555 23.933 10.1034 23.7958C9.63651 23.614 9.30339 23.3975 8.95315 23.0478C8.60291 22.698 8.38611 22.3652 8.20515 21.8983C8.06787 21.5463 7.90547 21.0162 7.86115 20.0413C7.81267 18.9872 7.80299 18.6706 7.80299 16.0001C7.80299 13.3296 7.81347 13.0138 7.86115 11.9589C7.90555 10.9839 8.06915 10.4549 8.20515 10.1018C8.38691 9.63496 8.60339 9.30184 8.95315 8.9516C9.30291 8.60136 9.63571 8.38456 10.1034 8.2036C10.4554 8.06632 10.9855 7.90392 11.9604 7.8596C13.0145 7.81112 13.3311 7.80144 16.0004 7.80144C18.6697 7.80144 18.9867 7.81192 20.0416 7.8596C21.0166 7.904 21.5456 8.0676 21.8987 8.2036C22.3655 8.38456 22.6987 8.60184 23.0489 8.9516C23.3991 9.30136 23.6151 9.63496 23.7969 10.1018C23.9342 10.4538 24.0966 10.9839 24.1409 11.9589C24.1894 13.0138 24.1991 13.3296 24.1991 16.0001C24.1991 18.6706 24.1894 18.9863 24.1409 20.0413C24.0965 21.0162 23.9333 21.5462 23.7969 21.8983C23.6151 22.3652 23.3987 22.6983 23.0489 23.0478C22.6991 23.3972 22.3655 23.614 21.8987 23.7958C21.5467 23.933 21.0166 24.0954 20.0416 24.1398C18.9875 24.1882 18.6709 24.1979 16.0004 24.1979C13.3299 24.1979 13.0142 24.1882 11.9604 24.1398ZM11.8776 6.06056C10.8131 6.10904 10.0856 6.27784 9.45035 6.52504C8.79243 6.78032 8.23547 7.1228 7.67891 7.67848C7.12235 8.23416 6.78075 8.792 6.52547 9.44992C6.27827 10.0856 6.10947 10.8126 6.06099 11.8772C6.01171 12.9434 6.00043 13.2843 6.00043 16C6.00043 18.7157 6.01171 19.0566 6.06099 20.1228C6.10947 21.1874 6.27827 21.9144 6.52547 22.5501C6.78075 23.2076 7.12243 23.7661 7.67891 24.3215C8.23539 24.877 8.79243 25.219 9.45035 25.475C10.0868 25.7222 10.8131 25.891 11.8776 25.9394C12.9444 25.9879 13.2847 26 16.0004 26C18.7161 26 19.057 25.9887 20.1232 25.9394C21.1879 25.891 21.9148 25.7222 22.5505 25.475C23.208 25.219 23.7654 24.8772 24.3219 24.3215C24.8785 23.7658 25.2194 23.2076 25.4754 22.5501C25.7226 21.9144 25.8922 21.1874 25.9399 20.1228C25.9883 19.0558 25.9996 18.7157 25.9996 16C25.9996 13.2843 25.9883 12.9434 25.9399 11.8772C25.8914 10.8126 25.7226 10.0852 25.4754 9.44992C25.2194 8.7924 24.8776 8.23504 24.3219 7.67848C23.7663 7.12192 23.208 6.78032 22.5513 6.52504C21.9148 6.27784 21.1878 6.10824 20.124 6.06056C19.0578 6.01208 18.7169 6 16.0012 6C13.2855 6 12.9444 6.01128 11.8776 6.06056Z" fill="white"/>
+                                </svg>
+                            </a>
+                        </li>
+                    </ul>
+                    <div class="footer__link-in-shop-container">
+                        <a class="footer__link-in-shop">войти в наш магазин</a>
+                    </div>
+                </div>
+            </div>
+            <div class="footer__bottom">
+                <div class="footer__services">
+                    <a class="footer__services-link" href="#">Политика конфиденциальности</a>
+                    <a class="footer__services-link" href="#">Соглашение cookies</a>
                 </div>
             </div>
         </div>
