--- a/src/components/detail/detail.scss
+++ b/src/components/detail/detail.scss
@@ -5,9 +5,16 @@
 }
 
 .detail-panel__inner {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
+  -webkit-box-pack: justify;
+  -ms-flex-pack: justify;
   justify-content: space-between;
+  -ms-flex-wrap: wrap;
   flex-wrap: wrap;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
   align-items: center;
 }
 
@@ -16,13 +23,23 @@
 }
 
 .detail-panel__list {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
+  -webkit-box-pack: justify;
+  -ms-flex-pack: justify;
   justify-content: space-between;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
   align-items: center;
 }
 
 .detail-panel__item {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
   align-items: center;
   cursor: pointer;
 }
@@ -46,6 +63,8 @@
 }
 
 .detail-panel__item svg:active {
+  -webkit-transform: scale(.9);
+  -ms-transform: scale(.9);
   transform: scale(.9);
 }
 
