--- a/src/components/card/card-items/card-items.scss
+++ b/src/components/card/card-items/card-items.scss
@@ -4,8 +4,13 @@
 }
 
 .article-card__items {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
+  -webkit-box-pack: justify;
+  -ms-flex-pack: justify;
   justify-content: space-between;
+  -ms-flex-wrap: wrap;
   flex-wrap: wrap;
   margin-bottom: 30px;
 }
@@ -21,8 +26,13 @@
   font-style: normal;
   font-weight: 600;
   font-size: 20px;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
+  -webkit-box-pack: center;
+  -ms-flex-pack: center;
   justify-content: center;
+  -webkit-text-decoration-line: underline;
   text-decoration-line: underline;
   color: #003C5A;
 }
