--- a/src/components/card/main-card/main-card.scss
+++ b/src/components/card/main-card/main-card.scss
@@ -1,14 +1,23 @@
 .main-article-card__item {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
   background: #FFFFFF;
+  -webkit-box-shadow: 0 2px 15px rgba(93, 125, 142, 0.3);
   box-shadow: 0 2px 15px rgba(93, 125, 142, 0.3);
   border-radius: 10px;
 }
 
 // bread crumbs
 .main-article-card__item .content-category__container {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
+  -webkit-box-pack: justify;
+  -ms-flex-pack: justify;
   justify-content: space-between;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
   align-items: center;
   position: relative;
 }
@@ -16,6 +25,7 @@
 .main-article-card__item .content-category__item-link {
   font-size: 14px;
   line-height: 16px;
+  -webkit-text-decoration-line: underline;
   text-decoration-line: underline;
   color: #777C86;
   position: relative;
@@ -32,8 +42,14 @@
   height: 24px;
   width: 24px;
   position: relative;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
+  -webkit-box-pack: center;
+  -ms-flex-pack: center;
   justify-content: center;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
   align-items: center;
   cursor: pointer;
 }
@@ -65,15 +81,26 @@
   height: 4px;
   top: 50%;
   left: 10px;
+  -webkit-transform: translateY(-50%);
+  -ms-transform: translateY(-50%);
   transform: translateY(-50%);
 }
 
 // content
 .main-article-card__content-container {
   padding: 18px 25px 21px 30px;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -ms-flex-direction: column;
   flex-direction: column;
+  -webkit-box-pack: justify;
+  -ms-flex-pack: justify;
   justify-content: space-between;
+  -webkit-box-flex: 50%;
+  -ms-flex: 50%;
   flex: 50%;
 }
 
@@ -98,21 +125,38 @@
 // footer panel
 .main-article-card__footer-panel {
   position: relative;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
+  -webkit-box-pack: justify;
+  -ms-flex-pack: justify;
   justify-content: space-between;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
   align-items: center;
+  -ms-flex-wrap: wrap;
   flex-wrap: wrap;
 }
 
 .card-footer-panel__items {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
+  -webkit-box-flex: 1;
+  -ms-flex: 1;
   flex: 1;
   margin-top: 29px;
+  -webkit-box-pack: justify;
+  -ms-flex-pack: justify;
   justify-content: space-between;
 }
 
 .card-footer-panel__item {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
   align-items: center;
   cursor: pointer;
 }
@@ -131,12 +175,16 @@
   font-size: 12px;
   line-height: 14px;
   color: #777C86;
+  -webkit-box-flex: 2;
+  -ms-flex: 2;
   flex: 2;
   margin-top: 29px;
 }
 
 .main-article-card__image {
   height: auto;
+  -webkit-box-flex: 46%;
+  -ms-flex: 46%;
   flex: 46%;
 }
 // footer panel effects
@@ -145,12 +193,16 @@
 }
 
 .card-footer-panel__item svg:active {
+  -webkit-transform: scale(.9);
+  -ms-transform: scale(.9);
   transform: scale(.9);
 }
 
 @media (max-width: 700.98px) {
   .main-article-card__image {
     border-radius: 10px 10px 0 0;
+    -webkit-box-flex: 100%;
+    -ms-flex: 100%;
     flex: 100%;
   }
   .main-article-card__content-container {
@@ -160,6 +212,7 @@
     -webkit-line-clamp: 7;
   }
   .main-article-card__item {
+    -ms-flex-wrap: wrap;
     flex-wrap: wrap;
   }
 }
