--- a/src/components/content-block/Modal/modal.scss
+++ b/src/components/content-block/Modal/modal.scss
@@ -8,6 +8,8 @@
   height: 100%;
   background: rgba(51, 51, 51, 0.75);
   z-index: 9999;
+  -webkit-transition: .3s all;
+  -o-transition: .3s all;
   transition: .3s all;
 }
 
@@ -19,13 +21,18 @@
   position: fixed;
   top: 50%;
   left: 50%;
+  -webkit-transform: translate(-50%, -50%);
+  -ms-transform: translate(-50%, -50%);
   transform: translate(-50%, -50%);
   z-index: 99999999;
+  -webkit-box-shadow: 0 3px 10px -.5px rgba(0, 0, 0, .2);
   box-shadow: 0 3px 10px -.5px rgba(0, 0, 0, .2);
   text-align: center;
   padding: 20px;
   border-radius: 3px;
   background-color: #fff;
+  -webkit-transition: 0.3s all;
+  -o-transition: 0.3s all;
   transition: 0.3s all;
 }
 
