--- a/src/components/content-block/bread-crumbs/bread-crumbs.scss
+++ b/src/components/content-block/bread-crumbs/bread-crumbs.scss
@@ -21,6 +21,8 @@
   height: 1px;
   background-color: #BDBDBD;
   top: 50%;
+  -webkit-transform: translateY(-50%);
+  -ms-transform: translateY(-50%);
   transform: translateY(-50%);
 }
 
