--- a/src/components/content-block/detailList-menu-links/menuLinks.scss
+++ b/src/components/content-block/detailList-menu-links/menuLinks.scss
@@ -5,7 +5,12 @@
 
 .category-links__inner {
   position: relative;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -ms-flex-direction: column;
   flex-direction: column;
 }
 
@@ -17,7 +22,10 @@
 .category-links__list {
   padding-right: 25px;
   margin-top: 24px;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
+  -ms-flex-wrap: wrap;
   flex-wrap: wrap;
   overflow: hidden;
   height: 100px;
@@ -27,11 +35,16 @@
   color: #777C86;
   font-size: 16px;
   line-height: 34px;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
   align-items: center;
   background: #FFFFFF;
   padding: 2px 14px;
   border: 1px solid #777C86;
+  -webkit-box-sizing: border-box;
   box-sizing: border-box;
   border-radius: 20px;
   margin-right: 9px;
