--- a/src/components/detail/detail-menu-links/menuLinks.scss
+++ b/src/components/detail/detail-menu-links/menuLinks.scss
@@ -5,13 +5,21 @@
 }
 
 .detail-links__inner {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -ms-flex-direction: column;
   flex-direction: column;
 }
 
 .detail-links__list {
   margin-top: 14px;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
+  -ms-flex-wrap: wrap;
   flex-wrap: wrap;
   overflow: hidden;
   height: 108px;
@@ -21,11 +29,16 @@
   color: #777C86;
   font-size: 16px;
   line-height: 34px;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
   align-items: center;
   background: #FFFFFF;
   padding: 2px 14px;
   border: 1px solid #777C86;
+  -webkit-box-sizing: border-box;
   box-sizing: border-box;
   border-radius: 20px;
   margin-right: 14px;
