--- a/src/components/footer/footer.scss
+++ b/src/components/footer/footer.scss
@@ -7,20 +7,35 @@
 .footer__wrapper {
   max-width: 930px;
   margin: 0 auto;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
+  -webkit-box-pack: justify;
+  -ms-flex-pack: justify;
   justify-content: space-between;
 }
 
 .footer__inner {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
   margin: 40px 0;
   width: 100%;
+  -webkit-box-pack: justify;
+  -ms-flex-pack: justify;
   justify-content: space-between;
 }
 
 .footer__inner > div {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
+  -webkit-box-pack: start;
+  -ms-flex-pack: start;
   justify-content: flex-start;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -ms-flex-direction: column;
   flex-direction: column;
 }
 
@@ -51,7 +66,12 @@
 .footer__lift-content {
   margin-top: 29px;
   height: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -ms-flex-direction: column;
   flex-direction: column;
 }
 
@@ -59,6 +79,7 @@
   display: block;
   font-size: 12px;
   line-height: 20px;
+  -webkit-text-decoration-line: underline;
   text-decoration-line: underline;
   color: #777C86;
 }
@@ -92,6 +113,7 @@
   line-height: 16px;
   color: #003C5A;
   border: 1px solid #003C5A;
+  -webkit-box-sizing: border-box;
   box-sizing: border-box;
   border-radius: 20px;
   padding: 5px 10px;
@@ -100,13 +122,18 @@
 
 //address
 .footer .location-address {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
   align-items: center;
 }
 
 .footer .location-address__value {
   font-weight: 500;
   font-size: 16px;
+  -webkit-text-decoration-line: underline;
   text-decoration-line: underline;
   color: #777C86;
   margin-left: 6px;
@@ -117,13 +144,21 @@
 }
 
 .footer .select__location-link {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
   align-items: center;
 }
 
 .location-address__container {
   min-height: 32px;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
   align-items: center;
 }
 
@@ -138,8 +173,14 @@
 
 //menu
 .footer__menu {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -ms-flex-direction: column;
   flex-direction: column;
+  -ms-flex-wrap: wrap;
   flex-wrap: wrap;
   height: 150px;
   width: 100%;
@@ -152,7 +193,11 @@
 }
 
 .footer__location-menu {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
+  -webkit-box-pack: start;
+  -ms-flex-pack: start;
   justify-content: flex-start;
 }
 
@@ -176,13 +221,21 @@
 }
 
 .footer__left-logo a {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
   align-items: center;
 }
 
 //social
 .footer__social {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
+  -webkit-box-pack: justify;
+  -ms-flex-pack: justify;
   justify-content: space-between;
 }
 
@@ -192,9 +245,14 @@
 
 
 .footer__inner.mobile .footer__social-container {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
+  -webkit-box-pack: justify;
+  -ms-flex-pack: justify;
   justify-content: space-between;
   width: 100%;
+  -ms-flex-wrap: wrap;
   flex-wrap: wrap;
 }
 
@@ -205,17 +263,27 @@
 
 .footer__inner.mobile .footer__social {
   margin-right: 30px;
+  -webkit-box-flex: 55%;
+  -ms-flex: 55%;
   flex: 55%;
   min-width: 230px;
+  -webkit-box-pack: justify;
+  -ms-flex-pack: justify;
   justify-content: space-between;
 }
 
 .footer__inner.mobile .footer__services {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
+  -webkit-box-pack: justify;
+  -ms-flex-pack: justify;
   justify-content: space-between;
 }
 
 .footer__inner.mobile .footer__link-in-shop-container {
+  -webkit-box-flex: 20%;
+  -ms-flex: 20%;
   flex: 20%;
 }
 
@@ -261,7 +329,12 @@
     position: absolute;
     bottom: 40px;
     height: auto;
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+    -ms-flex-direction: row;
     flex-direction: row;
+    -webkit-box-align: center;
+    -ms-flex-align: center;
     align-items: center;
   }
   .footer__inner-center {
@@ -311,6 +384,8 @@
   }
   .footer__inner.mobile .footer__link-in-shop-container {
     text-align: center;
+    -webkit-box-flex: 100%;
+    -ms-flex: 100%;
     flex: 100%;
     margin-top: 30px;
   }
@@ -318,9 +393,18 @@
     padding: 8px 34px;
   }
   .footer__inner.mobile .footer__services {
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
+    -webkit-box-pack: center;
+    -ms-flex-pack: center;
     justify-content: center;
+    -webkit-box-align: center;
+    -ms-flex-align: center;
     align-items: center;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -ms-flex-direction: column;
     flex-direction: column;
   }
   .footer__services-link:first-child {
