--- a/src/components/header/header.scss
+++ b/src/components/header/header.scss
@@ -7,10 +7,16 @@
 
 .header__container {
   width: 100%;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
   align-items: center;
   max-width: 970px;
   margin: 0 auto;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
+  -webkit-box-pack: justify;
+  -ms-flex-pack: justify;
   justify-content: space-between;
   padding: 0 25px 0 15px;
 }
@@ -28,13 +34,21 @@
 }
 
 .header__wrapper-content {
+  -webkit-box-flex: 2;
+  -ms-flex: 2;
   flex: 2;
 }
 
 .header__inner {
   width: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
+  -webkit-box-pack: justify;
+  -ms-flex-pack: justify;
   justify-content: space-between;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
   align-items: center;
 }
 
@@ -43,7 +57,11 @@
 }
 
 .header__logo a {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
   align-items: center;
 }
 
@@ -59,7 +77,11 @@
 }
 
 .header__social {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
   align-items: center;
 }
 
@@ -73,7 +95,11 @@
   height: 46px;
   border-radius: 50%;
   display: none;
+  -webkit-box-pack: center;
+  -ms-flex-pack: center;
   justify-content: center;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
   align-items: center;
 }
 
@@ -106,10 +132,14 @@
   }
 
   .header-side-menu-mobile__open-btn {
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
   }
   .header__social {
     width: 65%;
+    -webkit-box-pack: justify;
+    -ms-flex-pack: justify;
     justify-content: space-between;
   }
 }
@@ -134,6 +164,8 @@
 
 @media (max-width: 630.98px) {
   .header__inner {
+    -webkit-box-pack: end;
+    -ms-flex-pack: end;
     justify-content: flex-end;
   }
   .header__social {
