--- a/src/components/location-menu/location-Menu.scss
+++ b/src/components/location-menu/location-Menu.scss
@@ -1,7 +1,12 @@
 .location-menu {
   position: relative;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
+  -webkit-box-pack: justify;
+  -ms-flex-pack: justify;
   justify-content: space-between;
+  -ms-flex-wrap: wrap;
   flex-wrap: wrap;
   width: 100%;
   background-color: #FFFFFF;
@@ -10,7 +15,11 @@
 
 //address
 .location-address {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
   align-items: center;
   margin-right: 15px;
 }
@@ -24,13 +33,18 @@
 .location-address .location-address__value {
   font-weight: 500;
   font-size: 16px;
+  -webkit-text-decoration-line: underline;
   text-decoration-line: underline;
   color: #003C5A;
   margin-left: 6px;
 }
 
 .location-address .select__location-link {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
   align-items: center;
 }
 
@@ -68,8 +82,24 @@
   border-radius: 18px;
   width: 100%;
   height: 36px;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
   color: #777C86;
+}
+
+.exist-search__input:-moz-placeholder-shown {
+  color: #BDBDBD;
+  background-color: #F2F2F2;
+  border-color: transparent;
+  border-radius: 20px;
+}
+
+.exist-search__input:-ms-input-placeholder {
+  color: #BDBDBD;
+  background-color: #F2F2F2;
+  border-color: transparent;
+  border-radius: 20px;
 }
 
 .exist-search__input:placeholder-shown {
@@ -81,6 +111,7 @@
 
 .exist-search__input:focus {
   background: #FFFFFF;
+  -webkit-box-shadow: 0 2px 15px rgba(93, 125, 142, 0.3);
   box-shadow: 0 2px 15px rgba(93, 125, 142, 0.3);
   border-radius: 18px;
   color: #333333;
@@ -111,6 +142,7 @@
     right: 0;
   }
   .location-menu.box-shadow {
+    -webkit-box-shadow: 0 9px 17px -5px rgba(34, 60, 80, 0.25);
     box-shadow: 0 9px 17px -5px rgba(34, 60, 80, 0.25);
   }
 }
