--- a/src/components/menu/footer-nav/footer-nav.scss
+++ b/src/components/menu/footer-nav/footer-nav.scss
@@ -9,7 +9,11 @@
 }
 
 .footer__nav-menu {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
+  -webkit-box-pack: center;
+  -ms-flex-pack: center;
   justify-content: center;
 }
 
