--- a/src/components/modal/modal-category-menu/modal-category-menu.scss
+++ b/src/components/modal/modal-category-menu/modal-category-menu.scss
@@ -11,6 +11,7 @@
   height: 171px;
   overflow-y: auto;
   background: #FFFFFF;
+  -webkit-box-shadow: 0 2px 15px rgba(93, 125, 142, 0.3);
   box-shadow: 0 2px 15px rgba(93, 125, 142, 0.3);
   border-radius: 10px;
   display: none;
@@ -33,8 +34,14 @@
 }
 
 .modal-category-menu__item-link {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
+  -webkit-box-pack: start;
+  -ms-flex-pack: start;
   justify-content: flex-start;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
   align-items: center;
 }
 
