--- a/src/components/modal/modal-share-menu/modal-share-menu.scss
+++ b/src/components/modal/modal-share-menu/modal-share-menu.scss
@@ -10,6 +10,7 @@
   bottom: 30px;
   width: 180px;
   background: #FFFFFF;
+  -webkit-box-shadow: 0 2px 15px rgba(93, 125, 142, 0.3);
   box-shadow: 0 2px 15px rgba(93, 125, 142, 0.3);
   border-radius: 10px;
   display: none;
@@ -24,8 +25,14 @@
 }
 
 .modal-share-menu__item-link {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
+  -webkit-box-pack: start;
+  -ms-flex-pack: start;
   justify-content: flex-start;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
   align-items: center;
 }
 
