--- a/src/assets/style.scss
+++ b/src/assets/style.scss
@@ -25,6 +25,7 @@
 
 *, *:before, *:after {
   -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
   box-sizing: border-box;
 }
 
@@ -44,9 +45,7 @@ nav {
 img {
   width: 100%;
   height: 100%;
-  -o-object-fit: cover;
   object-fit: cover;
-  -o-object-position: top;
   object-position: top;
 }
 body {
@@ -129,11 +128,7 @@ svg path {
 .wrapper {
   max-width: 980px;
   margin: 0 auto;
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-pack: center;
-  -ms-flex-pack: center;
   justify-content: center;
   padding: 0 15px;
 }
@@ -156,7 +151,6 @@ svg path {
 .social-link__f:hover:not(:active),
 .social-link__ok:hover:not(:active),
 .social-link__vk:hover:not(:active) {
-  -webkit-box-shadow: 0 2px 5px rgba(103, 129, 143, 0.5);
   box-shadow: 0 2px 5px rgba(103, 129, 143, 0.5);
   border-radius: 24px;
 }
