Refactored the code

--- a/src/components/detail/detail.ejs
+++ b/src/components/detail/detail.ejs
@@ -2,7 +2,7 @@
     <h1 class="content__title">
         Памятник «Медный всадник» в Санкт-Петербурге
     </h1>
-    <div class="detail-panel" data-dropdown-modal>
+    <div class="detail-panel top" data-dropdown-modal>
         <div class="detail-panel__inner">
             <ul class="detail-panel__list">
                 <li class="detail-panel__item">
@@ -31,8 +31,8 @@
                     </svg>
                     <span class="detail-panel__count">Обсудить</span>
                 </li>
-                <li class="detail-panel__item">
-                    <svg class="detail-panel__logo" data-modal-share width="16" height="16" viewBox="0 0 16 16" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <li class="detail-panel__item" data-modal-share>
+                    <svg class="detail-panel__logo" width="16" height="16" viewBox="0 0 16 16" fill="none" xmlns="http://www.w3.org/2000/svg">
                         <path d="M8 9.33329V13L15 7.33329L8 1.66663V5.33329C4.318 5.33329 1.33333 8.31796 1.33333 12C1.33333 12.182 1.34 12.362 1.35467 12.54C1.86373 11.5721 2.62768 10.7617 3.56392 10.1966C4.50015 9.63139 5.57307 9.33287 6.66667 9.33329H8ZM9.33333 10.2053V7.99996H6.66667C5.72 7.99996 4.806 8.18063 3.962 8.51529C4.46221 7.93451 5.08199 7.46864 5.77893 7.14957C6.47586 6.8305 7.2335 6.66576 8 6.66663H9.33333V4.46129L12.8807 7.33329L9.33333 10.2053Z" fill="#777C86"/>
                     </svg>
                     <span class="detail-panel__count">Поделиться</span>
@@ -216,8 +216,8 @@
                 </svg>
                 <span class="detail-panel__count">52</span>
             </li>
-            <li class="detail-panel__item">
-                <svg data-modal-share class="detail-panel__logo" width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+            <li class="detail-panel__item" data-modal-share>
+                <svg class="detail-panel__logo" width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
                     <path d="M12 14V19.5L22.5 11L12 2.5V8C6.477 8 2 12.477 2 18C2 18.273 2.01 18.543 2.032 18.81C2.7956 17.3582 3.94152 16.1427 5.34587 15.2949C6.75023 14.4471 8.3596 13.9994 10 14H12ZM14 15.308V12H10C8.58 12 7.209 12.271 5.943 12.773C6.69332 11.9018 7.62299 11.203 8.66839 10.7244C9.71379 10.2458 10.8503 9.99871 12 10H14V6.692L19.321 11L14 15.308Z" fill="#777C86"/>
                 </svg>
                 <span class="detail-panel__count">Поделиться</span>
