Created a block with comments

--- a/src/components/detail/detail.ejs
+++ b/src/components/detail/detail.ejs
@@ -226,6 +226,7 @@
         <%- include('../modal/modal-share-menu/modal-share-menu'); -%>
     </div>
 </div>
+<%- include('comments/comments'); -%>
 <script>
     document.addEventListener('DOMContentLoaded', function() {
     //modal gallery
