--- a/src/assets/style.scss
+++ b/src/assets/style.scss
@@ -30,6 +30,9 @@
 @import "../components/dashboard/author-card/authorСard";
 @import "../components/dashboard/list-articles/listArticles";
 @import "../components/content-block/forms/edit-profile/editProfile";
+@import "../components/detail/comments/comments";
+@import "../components/detail/comments/simple-comment/simpleComment";
+@import "../components/content-block/forms/add-new-detail-comment/addNewDetailComment";
 
 *, *:before, *:after {
   -webkit-box-sizing: border-box;
