Created a map with a survey

--- a/src/assets/style.scss
+++ b/src/assets/style.scss
@@ -33,6 +33,7 @@
 @import "../components/detail/comments/comments";
 @import "../components/detail/comments/simple-comment/simpleComment";
 @import "../components/content-block/forms/add-new-detail-comment/addNewDetailComment";
+@import "../components/card/mini-pull-card/miniPullCard";
 
 *, *:before, *:after {
   -webkit-box-sizing: border-box;
