--- a/src/components/card/card-items/card-items.ejs
+++ b/src/components/card/card-items/card-items.ejs
@@ -12,7 +12,7 @@
         <%- include('../mini-card/mini-card'); -%>
         <%- include('../mini-card/mini-card'); -%>
         <%- include('../mini-card/mini-card'); -%>
-        <%- include('../mini-card/mini-card'); -%>
+        <%- include('../mini-pull-card/miniPullCard'); -%>
         <%- include('../mini-card/mini-card'); -%>
     </div>
     <span class="article-card__show-more-card">Показать еще</span>
